[package]
name = "bandsaw"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }

gloo    = { version = "0.10", features = ["file"] }
web-sys = { version = "0.3",  features = ["HtmlAnchorElement"] }

js-sys = "0.3"
wasm-bindgen = "0.2"

csv    = "1.2"
anyhow = "1.0"
